# demo

./: README.md  pyproject.toml  requirements.txt
src/demo/: mod1.py  mod2.py
src/demo.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_mod1.py  test_mod2.py
