[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "demo"
version = "0.0.1"
dependencies = [
    "pandas",
    "requests"
]
authors = [
  { name="Tim Christy", email="tchristy@routeware.com" },
]
description = "Module to demonstrate building a package in Python"
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["src"]
